--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body {
     justify-content: center;
     align-items: center;
     /*background-image: url(https://i.pinimg.com/originals/dd/53/d8/dd53d87ffa084978d5d1734b03ec1266.jpg) ; */
-    background-color: #5c4b7a; 
+    background-color: #B6D0E2; 
     color: white; */
 }
 
